--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8443
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+#Thymeleaf Properties
+spring.thymeleaf.cache=false
+ 
+#welcome.message=Hello Thymeleaf
